--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 </noscript>
 <div id="app">
     <mavon-editor :ishljs = "true" v-model="value"/>
-    <script type="text/javascript" src="./ribbon.js"></script>
+    <!-- <script type="text/javascript" src="./ribbon.js"></script> -->
 </div>
 </body>
 </html>
